SUBDIRS= api .
GENERATED_FILES= \
		 .msg.txt
		 css/screen.css \
		 _config.yml \
		 c-pink-about.html \
		 c-pink-fork-freebsd.html \
		 c-pink-fork-linux.html \
		 c-pink-simple-strace-freebsd.html \
		 c-pink-simple-strace-linux.html \
		 hs-pink-about.html \
		 hs-pink-fork-freebsd.html \
		 hs-pink-fork-linux.html \
		 py-pink-about.html \
		 py-pink-fork-freebsd.html \
		 py-pink-fork-linux.html \
		 py-pink-simple-strace-freebsd.html \
		 py-pink-simple-strace-linux.html \
		 rb-pink-about.html \
		 rb-pink-fork-freebsd.html \
		 rb-pink-fork-linux.html \
		 rb-pink-simple-strace-freebsd.html \
		 rb-pink-simple-strace-linux.html
CLEANFILES= $(GENERATED_FILES)
WWW_FILES= \
	   _layouts/default.html \
	   _includes/footer.html \
	   _includes/google-analytics.html \
	   _includes/menu.html \
	   _scripts/examples.rb \
	   css/syntax.css \
	   css/screen.css \
	   images/header.png \
	   images/favicon.png
EXTRA_DIST= $(WWW_FILES)

if ENABLE_SITE
%.css: %.css.in
	$(AM_V_GEN)
	$(AM_V_at)$(SED) \
		-e "s,##HOMEPAGE##,$(HOMEPAGE),g" \
		$< > $@

%.yml: %.yml.in
	$(AM_V_GEN)
	$(AM_V_at)$(SED) \
		-e "s,##VERSION##,$(VERSION),g" \
		-e "s,##HOMEPAGE##,$(HOMEPAGE),g" \
		-e "s,##SCM_URI##,$(SCM_URI),g" \
		$< > $@

c-%.html: $(top_srcdir)/examples/c/%.c
	$(AM_V_GEN)
	$(AM_V_at)_scripts/examples.rb $< > $@

hs-%.html: $(top_srcdir)/examples/haskell/%.hs
	$(AM_V_GEN)
	$(AM_V_at)_scripts/examples.rb $< > $@

py-%.html: $(top_srcdir)/examples/python/%.py
	$(AM_V_GEN)
	$(AM_V_at)_scripts/examples.rb $< > $@

rb-%.html: $(top_srcdir)/examples/ruby/%.rb
	$(AM_V_GEN)
	$(AM_V_at)_scripts/examples.rb $< > $@

.msg.txt:
	echo autogenerated docs for $(GITHEAD) > $@
endif # ENABLE_SITE

if ENABLE_SITE_COPY
site: $(GENERATED_FILES) $(WWW_FILES)
	$(RSYNC) -av --filter '- Makefile*' --filter '- *.in' --filter '- api' --filter '- _scripts' --filter '- _site' . $(SITE_INSTALL_DIR)/
	$(MAKE) -C api $@
site-check:
	@echo Run jekyll in $(SITE_INSTALL_DIR)
	exit 0
endif

if ENABLE_SITE_GEN
site: $(GENERATED_FILES) $(WWW_FILES)
	$(JEKYLL) --pygments $(SITE_INSTALL_DIR)

site-check: $(GENERATED_FILES) $(WWW_FILES)
	$(JEKYLL) --pygments --server $(SITE_INSTALL_DIR)
endif

doxygen:
	$(MAKE) -C api $@

epydoc:
	$(MAKE) -C api $@

rdoc:
	$(MAKE) -C api $@

.PHONY: site site-check doxygen epydoc rdoc
